[add] nicolas review #0

--- a/regression.ipynb
+++ b/regression.ipynb
@@ -138,6 +138,13 @@
     "plt.plot(xfit, yfit, 'r')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Logistic Regression with sigmoid curve"
+   ]
   }
  ],
  "metadata": {
