--- a/classif.ipynb
+++ b/classif.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build X"
+    "# Build X : Features"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build Y"
+    "# Build Y : Target/Label"
    ]
   },
   {
@@ -326,6 +326,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> Notes: virginica and versicolor are more complex to classify"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Supervised Learning"
    ]
   },
@@ -364,6 +371,13 @@
    "metadata": {},
    "source": [
     "## SVC prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](img/svc.png \"segment\")"
    ]
   },
   {
@@ -419,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SVC Performance"
+    "### SVC Performance with Confusion Matrix"
    ]
   },
   {
@@ -457,7 +471,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![SegmentLocal](img/rf.jpg \"segment\")"
    ]
   },
   {
@@ -513,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Random Forest Performance"
+    "### Random Forests Performance with confusion matrix"
    ]
   },
   {
@@ -587,7 +608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load mnist dataset"
+    "## Load MNIST dataset"
    ]
   },
   {
@@ -642,7 +663,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reshape X"
+    "## Reshape Images (X)"
    ]
   },
   {
@@ -689,7 +710,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pre Processing"
+    "> Note: The reshape operation destroys the geometrical structure of images "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre Processing: ONE-HOT Encoding"
    ]
   },
   {
@@ -735,7 +763,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build model"
+    "## Build model (MLP)"
    ]
   },
   {
@@ -783,7 +811,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fit model"
+    "## Train model"
    ]
   },
   {
@@ -928,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate model"
+    "## Performance evaluation"
    ]
   },
   {
